syntax = "proto3";

option go_package = "ms/gateway/pb";

import "google/protobuf/timestamp.proto";

package auth;
import "shared.proto";
import "roles.proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Regist(RegistRequest) returns (RegistResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (shared.EmptyBody);
    rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    AuthUser user = 1;
    Session session = 2;
}

message RegistRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message RegistResponse {
    AuthUser user = 1;
    Session session = 2;
}

message AuthUser {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string mobileNumber = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
    repeated roles.Role roles = 8;
}

message Session {
    string id = 1;
    int32 userId = 2;
    int64 createdAt = 3;
    int32 cookieMaxAge = 4;
    int64 expiresAt = 5;
}

message ResetPasswordRequest {
    string oldPassword = 1;
    string newPassword = 2;
    string confirmNewPassword = 3;
    int32 id = 4;
}

message ValidateSessionRequest {
    string sessionId = 1;
}

message ValidateSessionResponse {
    string sessionId = 1;
    AuthUser user = 2;
}