syntax = "proto3";

import "google/protobuf/timestamp.proto";

package redis;
option go_package = "ms/gateway/pb";

service SessionsService {
    rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc ValidateSession(AuthValidateSessionRequest) returns (AuthValidateSessionResponse);
    rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);
}

message CreateSessionRequest {
    int32 userId = 1;
}

message DeleteSessionRequest {
    string sessionId = 1;
}

message DeleteSessionResponse {
    bool success = 1;
    string message = 2;
}

message AuthValidateSessionRequest {
    string sessionId = 1;
}

message AuthValidateSessionResponse {
    Session session = 1;
    string message = 2;
    bool success = 3;
}

message CreateSessionResponse {
    Session session = 1;
    string message = 2;
    bool success = 3;
}

message Session {
    string id = 1;
    int32 userId = 2;
    google.protobuf.Timestamp createdAt = 3;
    int64 expiresAt = 4;
}

message GetSessionRequest {
    string sessionId = 1;
}

message GetSessionResponse {
    Session session = 1;
}